# budd

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/core/: common_header.rs  mod.rs
src/errors/: error.rs
src/services/: mod.rs  stock_service.rs
