[package]
name = "budd"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
csv = "1.1"
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
log = "0.4"
env_logger = "0.10"


